fixed alignment, bug if message without avatar element

--- a/src/modules/chat.scss
+++ b/src/modules/chat.scss
@@ -24,7 +24,7 @@
     @include border-radius(config("radius"));
     .da-container {
       .da-icon + .da-content {
-        margin-left: $outbound - $leftpad * 3;
+        margin-left: $outbound - $leftpad + 2px;
       }
     }
     &:before {
